fix: fixed banned padding on small devices, added logo in reason

--- a/styles/Global.module.scss
+++ b/styles/Global.module.scss
@@ -1,10 +1,15 @@
 .globalH2 {
   font-size: clamp(2.5rem, 4vw, 3.5rem);
   font-family: Helvetica, sans-serif;
+  color: #545554;
 }
 
 .redH4 {
   color: #F66E72;
   font-size: clamp(1.4rem, 3vw, 2rem);
   margin-bottom: .5rem;
+}
+
+.marginBottom {
+  margin-bottom: 1.5rem;
 }
