--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -21,10 +21,6 @@
   font-size: clamp(2rem, 2vw, 2.4rem);
   color: #a2a5a1;
   cursor: pointer;
-
-  :hover {
-    color: #cca1a4;
-  }
 }
 
 .active {
